# dynamic-ffs-demand-forecasting

./: CITATION.cff  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: confirmatory_same_reset.json  mandatory_start.json  zero_start.json
docs/: FEATURES.md  LIMITATIONS.md  METHODOLOGY.md  PAPER_COMPARISON.md  REPRODUCIBILITY.md  TIMESNET_SCOPE.md
notebooks/: 01_mandatory_start_executed.ipynb  02_zero_start_executed.ipynb  README.md
results/: README.md  feature_selection_path.csv  fresh_temporal_cv_folds.csv  fresh_temporal_cv_summary.csv  full_benchmark_ranking.csv  horizon_comparison_uncensored_overall.csv  hyperparameters.csv  mandatory_vs_zero_start.csv  our_evaluation_all_subsets_and_horizons.csv  our_paper_comparable_summary.csv  pairwise_comparison_vs_each_paper_model.csv  paper_benchmark_table3.csv  run_manifest.json  selected_features_and_interpretation.csv
scripts/: build_figures.py  validate_repository.py
src/dynamic_ffs_demand_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/freshretail_xgb/: __init__.py  metrics.py
tests/: test_metrics.py  test_result_invariants.py
