[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-ffs-demand-forecasting"
version = "0.1.0"
description = "GPU XGBoost demand forecasting with temporal validation and dynamic forward feature selection on FreshRetailNet-50K"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Milad Saeedi"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "xgboost>=2.1",
  "optuna>=4.0",
  "matplotlib>=3.8",
  "datasets>=3.0",
  "pyarrow>=15",
  "tqdm>=4.66",
  "joblib>=1.3",
  "shap>=0.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "jupyter>=1",
  "nbformat>=5.10",
  "nbconvert>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
